Upgrade SDK and Republish it.
