# kanmon_api_spec.json
@@ -600,6 +600,126 @@
         "security": [{ "Authorization": [] }]
       }
     },
+    "/api/platform/v2/sandbox/businesses/{id}/reset": {
+      "post": {
+        "operationId": "sandboxResetBusiness",
+        "x-readme": {
+          "code-samples": [
+            {
+              "language": "node",
+              "install": "npm install @kanmon/sdk",
+              "name": "SDK",
+              "code": "\nkanmonApi.businesses.sandboxResetBusiness({\n  ...params...\n})\n    "
+            }
+          ]
+        },
+        "summary": "Reset a business in sandbox",
+        "parameters": [
+          {
+            "name": "id",
+            "required": true,
+            "in": "path",
+            "description": "Either the Kanmon business UUID or your platform’s business ID, depending on `idType`.",
+            "example": "60eaa08c-f7a5-4f3a-860d-a16dde5771d6",
+            "schema": {}
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "",
+            "content": {
+              "application/json": {
+                "schema": { "$ref": "#/components/schemas/Business" }
+              }
+            }
+          },
+          "400": {
+            "description": "BadRequestException",
+            "content": {
+              "application/json": {
+                "schema": { "$ref": "#/components/schemas/BadRequestException" }
+              }
+            }
+          },
+          "403": {
+            "description": "ForbiddenException",
+            "content": {
+              "application/json": {
+                "schema": { "$ref": "#/components/schemas/ForbiddenException" }
+              }
+            }
+          },
+          "500": {
+            "description": "InternalServerErrorException",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/InternalServerErrorException"
+                }
+              }
+            }
+          }
+        },
+        "tags": ["Businesses"],
+        "security": [{ "Authorization": [] }]
+      }
+    },
+    "/api/platform/v2/sandbox/businesses/{id}/delete": {
+      "delete": {
+        "operationId": "sandboxDeleteBusiness",
+        "x-readme": {
+          "code-samples": [
+            {
+              "language": "node",
+              "install": "npm install @kanmon/sdk",
+              "name": "SDK",
+              "code": "\nkanmonApi.businesses.sandboxDeleteBusiness({\n  ...params...\n})\n    "
+            }
+          ]
+        },
+        "summary": "Delete a business in sandbox",
+        "parameters": [
+          {
+            "name": "id",
+            "required": true,
+            "in": "path",
+            "description": "Either the Kanmon business UUID or your platform’s business ID, depending on `idType`.",
+            "example": "60eaa08c-f7a5-4f3a-860d-a16dde5771d6",
+            "schema": {}
+          }
+        ],
+        "responses": {
+          "400": {
+            "description": "BadRequestException",
+            "content": {
+              "application/json": {
+                "schema": { "$ref": "#/components/schemas/BadRequestException" }
+              }
+            }
+          },
+          "403": {
+            "description": "ForbiddenException",
+            "content": {
+              "application/json": {
+                "schema": { "$ref": "#/components/schemas/ForbiddenException" }
+              }
+            }
+          },
+          "500": {
+            "description": "InternalServerErrorException",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/InternalServerErrorException"
+                }
+              }
+            }
+          }
+        },
+        "tags": ["Businesses"],
+        "security": [{ "Authorization": [] }]
+      }
+    },
     "/api/platform/v2/users": {
       "post": {
         "operationId": "createUser",
@@ -735,7 +855,7 @@
             "required": false,
             "in": "query",
             "description": "A comma delimited list of your Kanmon’s unique business IDs for users.",
-            "example": "06268279-1621-49af-b4f4-57d7f18d254e,1a9a36c6-6662-4bcb-b805-8e845ff647bf",
+            "example": "2b39aba5-18b9-4a68-814d-54bb75db0dde,5eb8f455-18a7-45dd-b757-6cfa826d8933",
             "schema": { "type": "string" }
           },
           {
@@ -1884,7 +2004,7 @@
             "required": false,
             "in": "query",
             "description": "A comma delimited list of your Kanmon’s unique business IDs for bannk accounts.",
-            "example": "fe1f509a-4100-4909-8d9d-52d786a2fe4b,9a977780-cddd-42b1-9538-30973a0a5f00",
+            "example": "d445ff65-47f5-4f96-b4ac-9a2360b9fba8,59cce1a8-5b43-4456-8daa-37488316d49f",
             "schema": { "type": "string" }
           },
           {
@@ -2230,7 +2350,7 @@
             "required": false,
             "in": "query",
             "description": "A comma delimited list of Kanmon’s unique draw request IDs.",
-            "example": "8f80d0c1-9158-46cc-8328-480d0b57f9ad,bbae380d-8df5-41d1-bb94-4a94d735b0a4",
+            "example": "5846c5ce-945f-43b9-a854-d1378eebe7ea,95201e6e-8177-4a43-8ace-2fa94b111b26",
             "schema": { "type": "string" }
           },
           {
@@ -3207,7 +3327,7 @@
             "example": "My Business"
           },
           "address": {
-            "description": "The business’s address. The address is optional. If you provide the address, you need to provide all the required fields in the address.",
+            "description": "The business’s address. The address is optional. If you provide the address, you need to provide all the required fields in the address. The address must be a street address, not a PO Box.",
             "example": {
               "city": "San Mateo",
               "state": "CA",
@@ -3264,7 +3384,7 @@
             "nullable": true
           },
           "address": {
-            "description": "The business’s address. The address is optional. If you provide the address, you need to provide all the required fields in the address.",
+            "description": "The business’s address. The address is optional. If you provide the address, you need to provide all the required fields in the address. The address must be a street address, not a PO Box.",
             "example": {
               "city": "San Mateo",
               "state": "CA",
@@ -3359,7 +3479,7 @@
             "example": "12345"
           },
           "address": {
-            "description": "The business’s address. The address is optional. If you provide the address, you need to provide all the required fields in the address.",
+            "description": "The business’s address. The address is optional. If you provide the address, you need to provide all the required fields in the address. The address must be a street address, not a PO Box.",
             "example": {
               "city": "San Mateo",
               "state": "CA",
@@ -3534,7 +3654,7 @@
             "example": "+14155556789"
           },
           "address": {
-            "description": "The user’s address. The address is optional. If you provide the address, you need to provide all the required fields in the address.",
+            "description": "The user’s address. The address is optional. If you provide the address, you need to provide all the required fields in the address. The address must be a street address, not a PO Box.",
             "example": {
               "city": "San Mateo",
               "state": "CA",
@@ -3588,7 +3708,7 @@
             "example": "adbcccf9-3a7f-4040-add3-55c9d6da2d37"
           },
           "address": {
-            "description": "The user’s address. The address is optional. If you provide the address, you need to provide all the required fields in the address.",
+            "description": "The user’s address. The address is optional. If you provide the address, you need to provide all the required fields in the address. The address must be a street address, not a PO Box.",
             "nullable": true,
             "example": {
               "city": "San Mateo",
@@ -3704,7 +3824,7 @@
             "example": "+14155556789"
           },
           "address": {
-            "description": "The user’s address. The address is optional. If you provide the address, you need to provide all the required fields in the address.",
+            "description": "The user’s address. The address is optional. If you provide the address, you need to provide all the required fields in the address. The address must be a street address, not a PO Box.",
             "example": {
               "city": "San Mateo",
               "state": "CA",
@@ -3923,7 +4043,7 @@
             "nullable": true
           },
           "payorAddress": {
-            "description": "The address of the payor. The address is optional. If you provide the address, you need to provide all the required fields in the address.",
+            "description": "The address of the payor. The address is optional. If you provide the address, you need to provide all the required fields in the address. The address must be a street address, not a PO Box.",
             "nullable": true,
             "example": {
               "city": "San Mateo",
@@ -3971,7 +4091,7 @@
             "nullable": true
           },
           "payeeAddress": {
-            "description": "The address of the payee. The address is optional. If you provide the address, you need to provide all the required fields in the address.",
+            "description": "The address of the payee. The address is optional. If you provide the address, you need to provide all the required fields in the address. The address must be a street address, not a PO Box.",
             "nullable": true,
             "example": {
               "city": "San Mateo",
@@ -5637,7 +5757,7 @@
             "example": "user@gmail.com"
           },
           "payorAddress": {
-            "description": "The address of the payor. The address is optional. If you provide the address, you need to provide all the required fields in the address.",
+            "description": "The address of the payor. The address is optional. If you provide the address, you need to provide all the required fields in the address. The address must be a street address, not a PO Box.",
             "example": {
               "city": "San Mateo",
               "state": "CA",
@@ -5743,7 +5863,7 @@
             "example": "user@gmail.com"
           },
           "payorAddress": {
-            "description": "The address of the payor. The address is optional. If you provide the address, you need to provide all the required fields in the address.",
+            "description": "The address of the payor. The address is optional. If you provide the address, you need to provide all the required fields in the address. The address must be a street address, not a PO Box.",
             "example": {
               "city": "San Mateo",
               "state": "CA",
@@ -5838,7 +5958,7 @@
             "example": "user@gmail.com"
           },
           "payeeAddress": {
-            "description": "The address of the payee. The address is optional. If you provide the address, you need to provide all the required fields in the address.",
+            "description": "The address of the payee. The address is optional. If you provide the address, you need to provide all the required fields in the address. The address must be a street address, not a PO Box.",
             "example": {
               "city": "San Mateo",
               "state": "CA",
@@ -5945,7 +6065,7 @@
             "example": "user@gmail.com"
           },
           "payeeAddress": {
-            "description": "The address of the payee. The address is optional. If you provide the address, you need to provide all the required fields in the address.",
+            "description": "The address of the payee. The address is optional. If you provide the address, you need to provide all the required fields in the address. The address must be a street address, not a PO Box.",
             "example": {
               "city": "San Mateo",
               "state": "CA",
